#7091: cleanup