@@ -11,7 +11,6 @@ import org.springframework.stereotype.Service;
 import org.wololo.geojson.Feature;
 import org.wololo.geojson.Geometry;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
@@ -30,12 +29,12 @@ public class OsmLayerProvider implements LayerProvider {
     KcApiClient kcApiClient;
 
     private static <T> T getMapValueFromProperty(Feature f, String propertyName, Object mapKey, Class<T> clazz) {
-        Map map = getProperty(f, propertyName, Map.class);
+        Map map = getFeatureProperty(f, propertyName, Map.class);
         return map == null ? null : map.get(mapKey) == null ? null : clazz.cast(map.get(mapKey));
     }
 
     private static LayerCategory layerCategory(Feature f) {
-        Boolean isOverlay = getProperty(f, DtoFeatureProperties.OVERLAY, Boolean.class);
+        Boolean isOverlay = getFeatureProperty(f, DtoFeatureProperties.OVERLAY, Boolean.class);
         return (isOverlay != null && isOverlay) ? OVERLAY : BASE;
     }
 
@@ -43,13 +42,21 @@ public class OsmLayerProvider implements LayerProvider {
         return input == null ? null : input.toLowerCase().replace(input.substring(0, 1), input.substring(0, 1).toUpperCase());
     }
 
-    private static <T> T getProperty(Feature f, String propertyName, Class<T> clazz) {
+    protected static <T> T getFeatureProperty(Feature f, String propertyName, Class<T> clazz) {
         Object value = f.getProperties() == null ? null : (f.getProperties()).get(propertyName);
         return value == null ? null : clazz.cast(value);
     }
 
+    /**
+     * @param geoJSON required to find features by intersection
+     * @param eventId not used
+     * @return
+     */
     @Override
     public List<Layer> obtainLayers(Geometry geoJSON, UUID eventId) {
+        if (geoJSON == null) {
+            return List.of();
+        }
         List<Feature> osmLayers = kcApiClient.getOsmLayers(geoJSON);
         return fromOsmLayers(osmLayers);
     }
@@ -59,28 +66,34 @@ public class OsmLayerProvider implements LayerProvider {
         if (!isApplicable(layerId)) {
             return null;
         }
-        throw new NotImplementedException(); //todo
+        throw new NotImplementedException(); //todo #7385 + javadoc
     }
 
     @Override
     public boolean isApplicable(String layerId) {
-        return true; //todo
+        return true; //todo #7385
     }
 
+    /**
+     * Each feature from <b>dto</b> represents a separate layer in the result
+     */
     List<Layer> fromOsmLayers(List<Feature> dto) {
         if (dto == null) {
-            return Collections.emptyList();
+            return List.of();
         }
-        return dto.stream().map(f -> Layer.builder()
-                .id((String) f.getId())
-                .name(getProperty(f, NAME, String.class))
-                .description(getProperty(f, DESCRIPTION, String.class))
-                .category(layerCategory(f))
-                .group(caseFormat(getProperty(f, CATEGORY, String.class)))
-                .copyright(getMapValueFromProperty(f, ATTRIBUTION, TEXT, String.class))
-                .maxZoom(getProperty(f, MAX_ZOOM, Integer.class))
-                .minZoom(getProperty(f, MIN_ZOOM, Integer.class))
-                .build()
+        return dto.stream().map(f -> {
+                    String copyright = getMapValueFromProperty(f, ATTRIBUTION, TEXT, String.class);
+                    return Layer.builder()
+                        .id((String) f.getId())
+                        .name(getFeatureProperty(f, NAME, String.class))
+                        .description(getFeatureProperty(f, DESCRIPTION, String.class))
+                        .category(layerCategory(f))
+                        .group(caseFormat(getFeatureProperty(f, CATEGORY, String.class)))
+                        .copyrights(copyright == null ? null : List.of(copyright))
+                        .maxZoom(getFeatureProperty(f, MAX_ZOOM, Integer.class))
+                        .minZoom(getFeatureProperty(f, MIN_ZOOM, Integer.class))
+                        .build();
+                }
             )
             .collect(Collectors.toList());
     }
